# ophois

./: Cargo.toml  LICENSE  README.md  compile.sh
.github/workflows/: coverage.yml
datasets/: cailles.graph  test_bfs.graph  test_discretize.graph  test_remove_under_delta_links.graph  test_remove_under_delta_nodes.graph  test_replace_link_by_node.graph  test_replace_node_by_links.graph  test_replace_under_delta_nodes.graph
src/: discretize.rs  geo.rs  graph.rs  heuristics.rs  main.rs  metrics.rs  openstreetmap.rs  overpass.rs  utils.rs
