[package]
name = "osmtograph"
version = "0.2.0"
authors = ["Jules Azad EMERY a.k.a. ethicnology <ethicnology@pm.me>"]
edition = "2021"
description = "osmtograph extract streets graph object from OpenStreetMap data"
readme = "README.md"
repository = "https://github.com/ethicnology/osmtograph"
license = "GPL-3.0-or-later"
keywords = ["OpenStreetMap", "OSM", "graph", "streets", "network", "map"]
categories = ["command-line-utilities"]


[dependencies]
structopt = "0.3"
serde = { version = "1.0", features = [ "derive" ] }
quick-xml = { version = "0.22", features = [ "serialize" ] }
rand = "0.8.0"